--- a/data/stories/complete_stories.yml
+++ b/data/stories/complete_stories.yml
@@ -7,12 +7,58 @@ stories:
   - intent: was_kannst_du
   - action: utter_was_kann_ich
   - checkpoint: check_begrueßung
+
 - story: start_allgemein
   steps:
   - checkpoint: check_begrueßung
   - intent: allgemein
   - action: utter_allgemein
   - checkpoint: check_weiterleitung
+
+- story: direkte nachfrage abschluss nicht notwendig
+  steps:
+  - checkpoint: check_begrueßung
+  - intent: direkte_nachfrage
+    entities:
+    - info: Gebühren
+    - studiengang: Digital Health
+  - slot_was_set:
+    - studiengang: Digital Health
+  - slot_was_set:
+    - info: Gebühren
+  - action: action_studiengang_vorhanden
+  - slot_was_set:
+    - studiengang_vorhanden: true
+  - action: utter_welcher_abschluss
+  - intent: abschluss
+    entities:
+      - abschluss: Master
+  - slot_was_set:
+      - abschluss: Master
+  - checkpoint: check_direkte_nachfrage
+
+- story: direkte nachfrage abschluss notwendig
+  steps:
+  - checkpoint: check_begrueßung
+  - intent: direkte_nachfrage
+    entities:
+    - info: Berufsbild
+    - studiengang: Maschinenbau
+  - slot_was_set:
+    - studiengang: Maschinenbau
+  - slot_was_set:
+    - info: Berufsbild
+  - action: action_studiengang_vorhanden
+  - slot_was_set:
+    - studiengang_vorhanden: true
+  - action: utter_welcher_abschluss
+  -  intent: abschluss
+     entities:
+       - abschluss: Master
+  - slot_was_set:
+      - abschluss: Master
+  - checkpoint: check_direkte_nachfrage
+
 - story: frage_nach_studienrichtung
   steps:
   - checkpoint: check_begrueßung
@@ -33,6 +79,7 @@ stories:
         - studienrichtung_vorhanden: true
     - action: action_studiengang_list_all_sr
     - checkpoint: check_weiterleitung
+
 - story: frage_nach_studiengaengen_einer_studienrichtung
   steps:
     - checkpoint: check_begrueßung
@@ -60,9 +107,6 @@ stories:
   - action: action_studiengang_vorhanden
   - slot_was_set:
     - studiengang_vorhanden: true
-  - action: action_abschluss_ueberpruefen
-  - slot_was_set:
-    - abschluss_notwendig: true
   - action: utter_welcher_abschluss
   - intent: abschluss
   - slot_was_set:
@@ -78,9 +122,10 @@ stories:
   - action: action_studiengang_vorhanden
   - slot_was_set:
     - studiengang_vorhanden: true
-  - action: action_abschluss_ueberpruefen
-  - slot_was_set:
-    - abschluss_notwendig: false
+  - action: utter_welcher_abschluss
+  - intent: abschluss
+    entities:
+      - abschluss: Bachelor
   - action: action_studiengang
   - checkpoint: check_studiengang
 - story: direkt_studiengang_nicht_vorhanden
@@ -211,6 +256,7 @@ stories:
   - action: utter_studienrichtung
   - action: action_studiengang_list_all_sr
   - checkpoint: check_studienrichtung
+
 - story: allgemein_studienrichtung_nicht_vorhanden 2
   steps:
   - checkpoint: check_weiterleitung
@@ -231,6 +277,7 @@ stories:
   - action: utter_studienrichtung
   - action: action_studiengang_list_all_sr
   - checkpoint: check_studienrichtung
+
 - story: allgemein_studienrichtung_studiengang_vorhanden_abschluss_notwendig
   steps:
   - checkpoint: check_studienrichtung
@@ -240,15 +287,13 @@ stories:
   - action: action_studiengang_vorhanden
   - slot_was_set:
     - studiengang_vorhanden: true
-  - action: action_abschluss_ueberpruefen
-  - slot_was_set:
-    - abschluss_notwendig: true
   - action: utter_welcher_abschluss
   - intent: abschluss
   - slot_was_set:
     - abschluss: master
   - action: action_studiengang
   - checkpoint: check_studiengang
+
 - story: allgemein_studienrichtung_studiengang_vorhanden_abschluss_nicht_notwendig
   steps:
   - checkpoint: check_studienrichtung
@@ -258,11 +303,15 @@ stories:
   - action: action_studiengang_vorhanden
   - slot_was_set:
     - studiengang_vorhanden: true
-  - action: action_abschluss_ueberpruefen
+  - action: utter_welcher_abschluss
+  - intent: abschluss
+    entities:
+      - abschluss: Bachelor
   - slot_was_set:
-    - abschluss_notwendig: false
+      - abschluss: Bachelor
   - action: action_studiengang
   - checkpoint: check_studiengang
+
 - story: allgemein_studienrichtung_studiengang_nicht_vorhanden_abschluss_abschluss_notwendig
   steps:
   - checkpoint: check_studienrichtung
@@ -280,15 +329,15 @@ stories:
   - action: action_studiengang_vorhanden
   - slot_was_set:
     - studiengang_vorhanden: true
-  - action: action_abschluss_ueberpruefen
-  - slot_was_set:
-    - abschluss_notwendig: true
   - action: utter_welcher_abschluss
   - intent: abschluss
+    entities:
+      - abschluss: bachelor
   - slot_was_set:
     - abschluss: bachelor
   - action: action_studiengang
   - checkpoint: check_studiengang
+
 - story: allgemein_studienrichtung_studiengang_nicht_vorhanden_abschluss_nicht_notwendig
   steps:
   - checkpoint: check_studienrichtung
@@ -306,11 +355,15 @@ stories:
   - action: action_studiengang_vorhanden
   - slot_was_set:
     - studiengang_vorhanden: true
-  - action: action_abschluss_ueberpruefen
+  - action: utter_welcher_abschluss
+  - intent: abschluss
+    entities:
+      - abschluss: Bachelor
   - slot_was_set:
-    - abschluss_notwendig: false
+      - abschluss: Bachelor
   - action: action_studiengang
   - checkpoint: check_studiengang
+
 - story: info
   steps:
   - checkpoint: check_studiengang
@@ -332,12 +385,94 @@ stories:
   - intent: negation
   - action: utter_verabschiedung
   - action: action_stop_the_bot
+
+- story: info neuanfang 1
+  steps:
+  - checkpoint: check_studiengang
+  - intent: info
+    entities:
+    - info: Regelstudienzeit
+  - action: action_info
+  - action: utter_info_nachfrage
+  - action: action_info_nachfrage
+  - intent: bestaetigung
+  - intent: info
+    entities:
+    - info: Berufsbild
+  - action: action_info
+  - action: utter_info_nachfrage
+  - action: action_info_nachfrage
+  - intent: negation
+  - action: utter_nachfrage_ende
+  - intent: bestaetigung
+  - action: utter_neuanfang
+  - action: action_restart
+  - action: utter_begrueßung
+
 - story: info 2
   steps:
   - checkpoint: check_studiengang
   - intent: info
     entities:
     - info: Zulassungsvorraussetzungen
+  - action: action_info
+  - action: utter_info_nachfrage
+  - action: action_info_nachfrage
+  - intent: info
+    entities:
+    - info: Jobs
+  - action: action_info
+  - action: utter_info_nachfrage
+  - action: action_info_nachfrage
+  - intent: negation
+  - action: utter_nachfrage_ende
+  - intent: negation
+  - action: utter_verabschiedung
+  - action: action_stop_the_bot
+
+- story: info neuanfang 2
+  steps:
+  - checkpoint: check_studiengang
+  - intent: info
+    entities:
+    - info: Zulassungsvorraussetzungen
+  - action: action_info
+  - action: utter_info_nachfrage
+  - action: action_info_nachfrage
+  - intent: info
+    entities:
+    - info: Jobs
+  - action: action_info
+  - action: utter_info_nachfrage
+  - action: action_info_nachfrage
+  - intent: negation
+  - action: utter_nachfrage_ende
+  - intent: bestaetigung
+  - action: utter_neuanfang
+  - action: action_restart
+  - action: utter_begrueßung
+
+- story: info für direkte nachfrage
+  steps:
+  - checkpoint: check_direkte_nachfrage
+  - action: action_info
+  - action: utter_info_nachfrage
+  - action: action_info_nachfrage
+  - intent: info
+    entities:
+    - info: Jobs
+  - action: action_info
+  - action: utter_info_nachfrage
+  - action: action_info_nachfrage
+  - intent: negation
+  - intent: bestaetigung
+  - action: utter_neuanfang
+  - action: action_restart
+  - action: utter_begrueßung
+
+- story: info für direkte nachfrage neuanfang
+  steps:
+  - checkpoint: check_direkte_nachfrage
   - action: action_info
   - action: utter_info_nachfrage
   - action: action_info_nachfrage
@@ -366,13 +501,12 @@ stories:
   - action: action_studiengang_vorhanden
   - slot_was_set:
       - studiengang_vorhanden: true
-  - action: action_abschluss_ueberpruefen
-  - slot_was_set:
-      - abschluss_notwendig: true
   - action: utter_welcher_abschluss
   - intent: abschluss
     entities:
     - abschluss: Bachelor
+  - slot_was_set:
+      - abschluss: Bachelor
   - action: action_info
   - action: utter_info_nachfrage
   - action: action_info_nachfrage
@@ -395,9 +529,12 @@ stories:
   - action: action_studiengang_vorhanden
   - slot_was_set:
       - studiengang_vorhanden: true
-  - action: action_abschluss_ueberpruefen
+  - action: utter_welcher_abschluss
+  - intent: abschluss
+    entities:
+      - abschluss: Bachelor
   - slot_was_set:
-      - abschluss_notwendig: false
+      - abschluss: Master
   - action: action_info
   - action: utter_info_nachfrage
   - action: action_info_nachfrage
